Avoid crash caused by drag and drop and winId()

Task-number: QTBUG-27263

QWExtra object pointer is not guaranteed to be valid in
QWidget::unregisterOldDnd() since commit
f6bf4b2baa91e55f40596bf3f2823b119fdfa5e0. To avoid crash we have to check
QWExtra object pointer of the native parent widget before access it, and
if the pointer is not valid we should check its native parent widget
recursively.

Change-Id: I764fea4a0826cff751dd74a0fb67e0d2971c1d49
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>